move config to .env and improve indexing

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
+# Project name
 PROJECT_NAME=bso_image_similarity
+
+# File to store image index. The path needs to be accessible
+# from the docker container.
+DATAFILE=/data/imageData.csv
+
+# File to store log
+LOGFILE=/data/log.txt
+
+# SPARQL endpoint from which to retrieve image data
+SPARQL_ENDPOINT=http://blazegraph:8080/blazegraph/sparql
+
+# Location and port of Pastec service
+PASTEC_HOST=pastec
+PASTEC_PORT=4212
+
+# Maximum number of images to retrieve/index
+LIMIT=25
