--- a/scripts/Taskfile.yml
+++ b/scripts/Taskfile.yml
@@ -2,16 +2,11 @@
 
 version: '3'
 
-vars:
-  ENDPOINT: http://blazegraph:8080/blazegraph/sparql
-  PASTEC_HOST: pastec
-  PASTEC_PORT: 4212
+dotenv:
+  - /dotenv/.env
 
 tasks:
   populate-index:
     desc: Populate the Pastec index with image data from  BSO
-    vars:
-      DATAFILE: /data/imageData.csv
-      LIMIT: 99999
     cmds:
-      - python populateIndex.py --endpoint {{.ENDPOINT}} --pastecHost {{.PASTEC_HOST}} --pastecPort {{.PASTEC_PORT}} --datafile {{.DATAFILE}} --limit {{.LIMIT}}
+      - python populateIndex.py --endpoint $SPARQL_ENDPOINT --pastecHost $PASTEC_HOST --pastecPort $PASTEC_PORT --datafile $DATAFILE --logfile $LOGFILE --limit $LIMIT
