update .env example

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ PROJECT_NAME=bso_image_similarity
 # from the docker container.
 DATAFILE=/data/imageData.csv
 
+# File to store similarity results
+RESULTS_JSON=/data/results.json
+
 # File to store log
 LOGFILE=/data/log.txt
 
