--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,11 @@ services:
       - ${PWD}/.env:/dotenv/.env
       - ./data:/data
       - ./scripts:/scripts
+
+  api:
+    build: ./services/api
+    container_name: ${PROJECT_NAME}_api
+    ports:
+      - 8082:5000
+    volumes:
+      - ./services/api/src:/src
