--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,7 @@ services:
     ports:
       - 8082:5000
     volumes:
+      - ./data:/data
       - ./services/api/src:/src
+      - ./scripts:/scripts
+      - .env:/src/.env
